--- a/index.html
+++ b/index.html
@@ -1312,8 +1312,11 @@
               .getElementById('exp-ref-image')
               .getBoundingClientRect();
             window.stimSizesByScale[wKey] = Math.round(rect.width);
-            window.stimSizesByScale[`stim_${scaleFactor}_height`] =
-              Math.round(rect.height);
+            window.stimSizesByScale[`stim_${scaleFactor}_height`] = Math.round(rect.height);
+            console.log(
+              `%c[stim-size] scale=${currentScale}  →  ${rect.width.toFixed(1)} × ${rect.height.toFixed(1)} CSS px`,
+              'color:#0d6efd;font-weight:bold'
+            );
           }
 
           /* ── enable button & schedule next frame ── */
