--- a/index.html
+++ b/index.html
@@ -241,14 +241,16 @@
     window.stimSizesByScale = {};
 
     var objectNames = [
-      //"Book Shelves", "Chess", "Wheel", "Food Platter", "Fruits", "Humming Bird", "Plant", "Swing", "Vase", 
-      "Wood"
+      //"Book Shelves", "Chess", "Wheel", "Food Platter", "Fruits", 
+      "Humming Bird", 
+      //"Plant", "Swing", "Vase", 
+      //"Wood"
     ];
     var groups = {
-      //"Group1": ["Center_100%_Plain", "Center_100%_LowContrast"],
-      //"Group2": ["Left_100%_Plain", "Right_100%_Plain"],
+      "Group6": ["Center_100%_Plain"],
+      //"Group2": ["Center_100%_LowContrast, "Left_100%_Plain", "Right_100%_Plain"],
       //"Group3": ["Up_100%_Plain", "Down_100%_Plain"],
-      "Group4": ["Center_125%_Plain"],
+      //"Group4": ["Center_125%_Plain"],
       //"Group5": ["Center_100%_PatternHoriz", "Center_100%_PatternVert", "Center_100%_Messy"]
     };
     function getRandomElement(a) { return a[Math.floor(Math.random() * a.length)]; }
@@ -1051,7 +1053,7 @@
           c.innerHTML = `
         <div style="display:flex;flex-direction:column;align-items:center;
                     justify-content:center;height:80vh;font-family:Arial,Helvetica,sans-serif;">
-          <h2 style="margin-bottom:16px;">Starting set 2 (smaller stimuli)</h2>
+          <h2 style="margin-bottom:16px;">Starting next set(different stimuli size)</h2>
           <p style="font-size:20px;">This set has no link to prior set</b></p>
         </div>`;
           document.getElementById('yes-button-container').style.display = 'none';
