--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@
       choices: ['Continue'],
       on_load: function () {
         const btn = document.querySelector('.jspsych-btn');
-        btn.disabled = true;
+        btn.disabled = false;
 
         const video = document.getElementById('demo-video');
         let playStart = null;
@@ -1654,4 +1654,5 @@
 </body>
 
 </html>
+
 
